[package]
name = "sorted-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.num]
version = "0.4"
default-features = false

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "bench_sorted"
harness = false

[features]
default = ["use-sse", "std"]
std = ["num/std"]
use-sse = []
use-avx2 = []

[lib]
doctest = false
